# gitparse

./: README.md  gitparse.cabal
app/: Main.hs
src/: Lib.hs
